crates/ir/tests/snapshots/lower_test__traits__method_where_basic.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module traits__method_where_basic

trait Default[j9] { default(): j9 }
trait R[k9] { lol(k9[l9]): k9[l9] }
instance traits__method_where_basic.Default[Int] { default=Default$$Int$$default }
instance traits__method_where_basic.R[List] { lol=R$$List$$lol }
import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[y8]): List[y8]
import core/io/println as println(s): Unit
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
declare println: (s) -> Unit

fn main() -> Unit =
  let v2: ~List[r9] = construct List::Nil#1()
  let v3: Dict[traits__method_where_basic.R, List] = get_dict traits__method_where_basic.R[List]
  let v4: Dict[traits__method_where_basic.Default, Int] = get_dict traits__method_where_basic.Default[Int]
  let v5: List[Int] = trait_call traits__method_where_basic.R.lol(v3, v4, v2)
  let v0: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v1: Dict[core/show.Show, List[Int]] = make_dict core/show.Show[List[Int]](v0)
  let v6: Unit = call println(v1, v5)
  v6

fn Default$$Int$$default() -> ~Int =
  0

fn R$$List$$lol(v7: Dict[traits__method_where_basic.Default, l9], v8: List[l9]) -> ~List[l9] =
  let v9: l9 = trait_call traits__method_where_basic.Default.default(v7)
  let v10: ~List[l9] = construct List::Cons#0(v9, v8)
  v10
